# hasyield-programs

./: .env.example  .gitignore  Anchor.toml  CLAUDE.md  CRANKER_DEPLOY.md  Cargo.toml  KEEPER_DEPLOY.md  QUICKSTART.md  README.md  package-lock.json  package.json
docs/brainstorms/: 2026-04-14-lp-composability-requirements.md  2026-04-14-lp-position-composability-pivot-brainstorm.md
docs/plans/: 2026-04-14-001-feat-lp-position-composability-plan.md  2026-04-17-001-feat-remaining-work-plan.md
programs/lending/: Cargo.toml
programs/lending/src/: lib.rs
programs/lp-vault/: Cargo.toml
programs/lp-vault/src/: lib.rs
programs/transfer-hook/: Cargo.toml
programs/transfer-hook/src/: lib.rs
scripts/: deploy.sh  e2e-test.ts  keeper.ts  rebalance-cranker.ts  seed-lending-pool.ts  setup-dlmm-pool.ts  setup-lp-vault.ts  setup-solend.ts  test-marinade.ts
tests/: integration.ts
