[package]
name = "transfer_hook"
version = "0.1.0"
description = "Compliance enforcement via Token-2022 Transfer Hook"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "transfer_hook"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
]

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed", "interface-instructions"] }
anchor-spl = { version = "0.31.0", features = ["token_2022"] }
spl-tlv-account-resolution = "0.9.0"
spl-transfer-hook-interface = "0.9.0"
